[package]
name = "rustmetamap"
version = "0.1.0"
authors = ["Ayuei <sefton_student@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2"
vtext = "0.2"
rayon = "1.1"
structopt = { version = "0.3", default-features = false }
futures = "0.3" 